MM-12572 - Fixing more unreads and badge on mobile (#1863)

--- a/sass/components/_badge.scss
+++ b/sass/components/_badge.scss
@@ -20,4 +20,12 @@
             z-index: 5;
         }
     }
+
+    .navbar-toggle {
+        .badge {
+            position: absolute;
+            top: 10px;
+            left: 8px;
+        }
+    }
 }
